# werewolf-ai

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  HANDLER_INTERFACE.md  HANDLER_SPECS.md  PHASES.md  PHASE_HANDLERS.md  PLAN.md  PLAN_TUI_GAME.md  PLAN_VALIDATOR.md  PROMPTS.md  README.md  RULES.md  RULES_CN.md  RULES_INDEX.md  TUI_STATUS.md  debug_prompts.txt  demo_blessed.py  demo_pick.py  demo_prompt_toolkit.py  demo_textual.py  main.py  pyproject.toml  run_1k_stress_test.py  run_1m_games.py  run_game.py  run_single_game.py  werewolf_tui_demo.py
.claude/: settings.local.json
.plans/: cached-sleeping-torvalds.md
scripts/: find_post_game_violations.py  regenerate_rules_index.py  rules_index.yaml  run_debug_game.py  run_stress_test.py  run_tui_game.py  stress_test_game.py  tui_demo.py
tests/: conftest.py  test_banishment_resolution_handler.py  test_campaign_handler.py  test_day_scheduler.py  test_death_resolution_handler.py  test_discussion_handler.py  test_event_collector.py  test_event_log.py  test_event_visibility.py  test_game_state.py  test_guard_handler.py  test_handler_choices_integration.py  test_handler_prompt_lengths.py  test_handler_stub_integration.py  test_human_stub_stress.py  test_integration_sheriff.py  test_interactive_participant.py  test_models.py  test_night_action_resolver.py  test_night_action_store.py  test_night_resolution_handler.py  test_night_scheduler.py  test_nomination_handler.py  test_opt_out_handler.py  test_seer_handler.py  test_sheriff_election_handler.py  test_stress_test.py  test_textual_game.py  test_textual_pilot.py  (+4 more)
(+76 files in other folders)
