[project]
name = "werewolf-ai"
version = "0.1.0"
description = "Werewolf CLI game with AI-powered NPCs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "rich>=13.0",
    "textual>=0.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout",
]

[project.scripts]
werewolf = "werewolf.play:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 60

[tool.hatch.build.targets.wheel]
packages = ["src/werewolf"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
